# ai-maestro-chief-of-staff

./: .gitignore  CHANGELOG.md  README.md  ai-maestro-chief-of-staff.agent.toml  pyproject.toml
.claude-plugin/: plugin.json
.serena/: project.yml
agents/: ai-maestro-chief-of-staff-main-agent.md  amcos-approval-coordinator.md  amcos-chief-of-staff-main-agent.md  amcos-lifecycle-manager.md  amcos-performance-reporter.md  amcos-plugin-configurator.md  amcos-project-coordinator.md  amcos-recovery-coordinator.md  amcos-resource-monitor.md  amcos-skill-validator.md  amcos-staff-planner.md  amcos-team-coordinator.md
commands/: amcos-add-project.md  amcos-assign-project.md  amcos-broadcast-notification.md  amcos-check-approval-status.md  amcos-configure-plugins.md  amcos-health-check.md  amcos-hibernate-agent.md  amcos-install-skill-notify.md  amcos-list-projects.md  amcos-notify-agents.md  amcos-notify-manager.md  amcos-performance-report.md  amcos-recovery-workflow.md  amcos-reindex-skills.md  amcos-remove-project.md  amcos-replace-agent.md  amcos-request-approval.md  amcos-resource-report.md  amcos-spawn-agent.md  amcos-staff-status.md  amcos-terminate-agent.md  amcos-transfer-agent.md  amcos-transfer-work.md  amcos-validate-skills.md  amcos-wait-for-agent-ok.md  amcos-wait-for-approval.md  amcos-wake-agent.md
docs/: AGENT_OPERATIONS.md  FULL_PROJECT_WORKFLOW.md  ROLE_BOUNDARIES.md  TEAM_REGISTRY_SPECIFICATION.md
git-hooks/: pre-push
hooks/: hooks.json
scripts/: amcos_add_project.py  amcos_approval_manager.py  amcos_archive_logs.py  amcos_assign_project.py  (+56 more)
(+377 files in other folders)
