[project]
name = "ai-maestro-chief-of-staff"
version = "2.10.1"
description = "Per-team agent management plugin for Claude Code. Staff planning, lifecycle, governance workflows, failure recovery."
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
